--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "nodemon": "^1.17.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^5.0.0"
+    "passport-local-mongoose": "^5.0.0",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1"
   }
 }
